--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <p class="section-subtitle">Categories</p>
 
           <h2 class="h2 section-title">
-            Online <span class="span">Classes</span> For Remote Learning.
+            Online <span class="span">Classes</span> For Techy-Geeks.
           </h2>
 
           <p class="section-text">
